---------------------------------------------------------------------------------------------------
Version: 17.0.6
Date: 2019-12-
  Features:
  Changes:
    - Don't reincarnate from fire also includes "cold" damage type used by Cold Biters mod.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.5
Date: 2019-11-23
  Features:
  Changes:
  Bugfixes:
    - out-of-map (void) tile is handled without soft error warnings
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.4
Date: 2019-06-24
  Features:
  Changes:
  Bugfixes:
    - Changed to work with mods that add new trees without autoplace settings. May no longer error with special mods that do their own map generation, but won't put the expected trees either.
    - Set to be specifcially incompatible with Alien Biomes mod due to its custom tiles.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.3
Date: 2019-06-02
  Features:
    - Add option to disable biters reincarnate from fire death
    - Add option to set how many times a tree fire can jump
  Changes:
  Bugfixes:
  Info:
    - remove erronous logging
---------------------------------------------------------------------------------------------------
Version: 17.0.2
Date: 2019-05-31
  Features:
  Changes:
  Bugfixes:
    - fix mod crash when biter turns in to a flaming tree
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2019-05-31
  Features:
    - Add setting for enemy units chance of turning in to tree on death.
  Changes:
    - Add script interface for using the entity generation logic.
    - Tree data is obtained from data so supports modded trees (not modded tiles).